# dmenu-statusbar

./: .gitignore  90-dmenustatus.sh  Makefile  Makefile.am  README  README.md  bootstrap.sh  config.mk  configure.ac
include/: battery.h  date.h  dmenustatus.h  file.h  inout.h  smprintf.h  temp.h  utils.h
src/: Makefile.am  battery.c  battery.h  date.c  dmenustatus.c  dmenustatus.h  file.c  inout.c  inout.h  smprintf.c  temp.c  utils.c  utils.h
